--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 	<div class="main-div">
 		<div class="m-header mm">
 			<select class="form-select" aria-label="Default select example">
-			  <option selected>Open this select menu</option>
-			  <option value="1">One</option>
-			  <option value="2">Two</option>
-			  <option value="3">Three</option>
+			 
 			</select>
 			<div class="input-group mmmd">
 			  <input type="number" class="form-control" placeholder="money" aria-label="Username" aria-describedby="basic-addon1" id="money_d">
@@ -126,7 +123,7 @@
 			for (var i = 1; i <= numberInputs; i++) {
 				$('.inputs').append(`<div class="input-group mb-1">
 					  <div class="input-group-prepend">
-					    <span class="input-group-text" id="basic-addon1">Coefficient</span>
+					    <span class="input-group-text" id="basic-addon1">Game ${i} Coeff</span>
 					  </div>
 					  <input type="number" id="dd_${i}" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
 					</div>`)
